# mcp

./: .gitignore  LICENSE  README.md  TECHNICAL_DOCUMENTATION.md
backend/: .env  README.md  database.db  database.py  main.py  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
